ajout du header dans la structure

--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
 </head>
 <body>
     
+<header>
+        <div class="logo_container">
+            <img src="images/logo3.png" alt="logo" class="logo_container_image">
+        </div>
+        <h1 class="nature">Awesome nature</h1>
+    </header>
 </body>
 </html>
