--- a/index.html
+++ b/index.html
@@ -14,5 +14,19 @@
         </div>
         <h1 class="nature">Awesome nature</h1>
     </header>
+
+       <main>
+        <h1 class="heading_2">Scroll infini</h1>
+        <div class="cart_container">
+            <div class="carts cart1">DIV1</div>
+            <div class="carts cart2">DIV2</div>
+            <div class="carts cart3">DIV3</div>
+        </div>
+        <button id="click_me" class="button">click</button>
+    </main>
+    <footer>
+
+    </footer>
+    <script src="js/app.js"></script>
 </body>
 </html>
